@@ -1,16 +1,16 @@
 package edu.upc.subgrupprop113.supermarketmanager;
 
-import org.junit.jupiter.api.*;
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.Before;
+import org.junit.Test;
+import static org.junit.Assert.*;
 
 import java.util.*;
 
 public class CatalogTest {
     private Catalog catalog;
-
     private Product product1, product2, product3;
 
-    @BeforeEach
+    @Before
     public void setUp() {
         // Initialize the catalog
         catalog = Catalog.getInstance();
@@ -46,10 +46,15 @@ public class CatalogTest {
     public void testGetProduct() {
         // Test getting an existing product
         Product retrievedProduct = catalog.getProduct("Apple");
-        assertEquals(product1, retrievedProduct, "Should retrieve the correct product by name.");
+        assertEquals("Should retrieve the correct product by name.", product1, retrievedProduct);
 
         // Test getting a non-existing product
-        assertThrows(IllegalArgumentException.class, () -> catalog.getProduct("Milk"), "Expected an IllegalArgumentException to be thrown when attempting to retrieve a product that does not exist in the catalog.");
+        try {
+            catalog.getProduct("Milk");
+            fail("Expected an IllegalArgumentException to be thrown when attempting to retrieve a product that does not exist in the catalog.");
+        } catch (IllegalArgumentException e) {
+            // expected
+        }
     }
 
     @Test
@@ -57,35 +62,37 @@ public class CatalogTest {
         List<Product> products = catalog.getAllProducts();
 
         // Check that the returned list contains the products added
-        assertEquals(3, products.size(), "The number of products should be 3.");
-        assertTrue(products.contains(product1), "The list should contain product1.");
-        assertTrue(products.contains(product2), "The list should contain product2.");
-        assertTrue(products.contains(product3), "The list should contain product3.");
+        assertEquals("The number of products should be 3.", 3, products.size());
+        assertTrue("The list should contain product1.", products.contains(product1));
+        assertTrue("The list should contain product2.", products.contains(product2));
+        assertTrue("The list should contain product3.", products.contains(product3));
 
         // Verify that attempting to modify the list throws an UnsupportedOperationException
-        assertThrows(UnsupportedOperationException.class,
-                () -> products.add(new Product("Orange", 0.99f, ProductTemperature.AMBIENT, "/images/orange.jpg")),
-                "Attempting to modify the products list should throw an UnsupportedOperationException.");
+        try {
+            products.add(new Product("Orange", 0.99f, ProductTemperature.AMBIENT, "/images/orange.jpg"));
+            fail("Attempting to modify the products list should throw an UnsupportedOperationException.");
+        } catch (UnsupportedOperationException e) {
+            // expected
+        }
     }
 
     @Test
     public void testContainsByName() {
         // Test contains method for an existing product
-        assertTrue(catalog.contains("Apple"), "Catalog should contain 'Apple'.");
+        assertTrue("Catalog should contain 'Apple'.", catalog.contains("Apple"));
 
         // Test contains method for a non-existing product
-        assertFalse(catalog.contains("Banana"), "Catalog should not contain 'Banana'.");
+        assertFalse("Catalog should not contain 'Banana'.", catalog.contains("Banana"));
     }
 
     @Test
     public void testContainsByProduct() {
         // Test contains method for an existing product object
-        assertTrue(catalog.contains(product1), "Catalog should contain the product 'Apple'.");
+        assertTrue("Catalog should contain the product 'Apple'.", catalog.contains(product1));
 
         // Test contains method for a non-existing product object
         Product nonExistentProduct = new Product("Banana", 0.99f, ProductTemperature.AMBIENT, "/images/banana.jpg");
-        assertFalse(catalog.contains(nonExistentProduct),
-                "Catalog should not contain the product 'Banana'.");
+        assertFalse("Catalog should not contain the product 'Banana'.", catalog.contains(nonExistentProduct));
     }
 
     @Test
@@ -98,27 +105,42 @@ public class CatalogTest {
         p3 = new Product("Ice", 7.99f, ProductTemperature.FROZEN, "/images/ice.jpg");
 
         // Null products list - should throw IllegalArgumentException
-        assertThrows(IllegalArgumentException.class, () -> catalog.setAllProducts(null),
-                "Expected IllegalArgumentException for null products list.");
+        try {
+            catalog.setAllProducts(null);
+            fail("Expected IllegalArgumentException for null products list.");
+        } catch (IllegalArgumentException e) { }
 
         // Products list with insufficient relations (two products, one relation needed)
-        assertThrows(IllegalArgumentException.class, () -> catalog.setAllProducts(Arrays.asList(p1, p2)),
-                "Expected IllegalStateException due to insufficient unique relations.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p2));
+            fail("Expected IllegalStateException due to insufficient unique relations.");
+        } catch (IllegalArgumentException e) { }
 
         RelatedProduct rel1 = new RelatedProduct(p1, p2, 0.2f);
 
-        assertDoesNotThrow(() -> catalog.setAllProducts(Arrays.asList(p1, p2)),
-                "Expected no exception for valid products list with correct relations.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p2));
+        } catch (Exception e) {
+            fail("Expected no exception for valid products list with correct relations.");
+        }
 
         // Products list with duplicates - should throw IllegalArgumentException
-        assertThrows(IllegalArgumentException.class, () -> catalog.setAllProducts(Arrays.asList(p1, p2, p2)),
-                "Expected IllegalArgumentException for duplicate products.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p2, p2));
+            fail("Expected IllegalArgumentException for duplicate products.");
+        } catch (IllegalArgumentException e) {
+            // expected
+        }
 
         RelatedProduct rel2 = new RelatedProduct(p1, p3, 0.4f);
 
         // Referenced products not in the list
-        assertThrows(IllegalArgumentException.class, () -> catalog.setAllProducts(Arrays.asList(p1, p2)),
-                "Expected an exception for referencing products that are not in the list.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p2));
+            fail("Expected an exception for referencing products that are not in the list.");
+        } catch (IllegalArgumentException e) {
+            // expected
+        }
     }
 
     @Test
@@ -132,23 +154,32 @@ public class CatalogTest {
         RelatedProduct rel1 = new RelatedProduct(p1, p2, 0.2f);
 
         // Referenced products not in the list
-        assertThrows(IllegalArgumentException.class, () -> catalog.setAllProducts(Arrays.asList(p1, p3)),
-                "Expected an exception for referencing products that are not in the list.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p3));
+            fail("Expected an exception for referencing products that are not in the list.");
+        } catch (IllegalArgumentException e) { }
 
         RelatedProduct rel2 = new RelatedProduct(p1, p3, 0.4f);
 
         // Fewer number of relations than required in the products list
-        assertThrows(IllegalArgumentException.class, () -> catalog.setAllProducts(Arrays.asList(p1, p2, p3)),
-                "Expected an exception for fewer number of relations than required.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p2, p3));
+            fail("Expected an exception for fewer number of relations than required.");
+        } catch (IllegalArgumentException e) { }
 
         RelatedProduct rel3 = new RelatedProduct(p2, p3, 0.6f);
 
         // Number relations exceeds the required number in the products list
-        assertThrows(IllegalArgumentException.class, () -> catalog.setAllProducts(Arrays.asList(p1, p2)),
-                "Expected an exception for exceeding the number of relations.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p2));
+            fail("Expected an exception for exceeding the number of relations.");
+        } catch (IllegalArgumentException e) { }
 
-        assertDoesNotThrow(() -> catalog.setAllProducts(Arrays.asList(p1, p2, p3)),
-                "Expected no exception for valid products list with correct relations.");
+        try {
+            catalog.setAllProducts(Arrays.asList(p1, p2, p3));
+        } catch (Exception e) {
+            fail("Expected no exception for valid products list with correct relations.");
+        }
     }
 
     @Test
@@ -160,54 +191,57 @@ public class CatalogTest {
 
         // Create new product successfully
         Product bread = catalog.createNewProduct("Bread", 1.50f, ProductTemperature.AMBIENT, "/images/bread.jpg", keywords, relatedProducts, relatedValues);
-        assertEquals("Bread", bread.getName(), "The product name should be 'Bread'.");
-        assertTrue(catalog.contains("Bread"), "The catalog should contain the product 'Bread'.");
+        assertEquals("The product name should be 'Bread'.", "Bread", bread.getName());
+        assertTrue("The catalog should contain the product 'Bread'.", catalog.contains("Bread"));
 
         // Product name already exists
-        assertThrows(IllegalArgumentException.class, () -> catalog.createNewProduct("Apple", 1.20f, ProductTemperature.AMBIENT, "/images/banana.jpg", keywords, relatedProducts, relatedValues),
-                "Creating a product with an existing name 'Apple' should throw an IllegalArgumentException.");
+        try {
+            catalog.createNewProduct("Apple", 1.20f, ProductTemperature.AMBIENT, "/images/banana.jpg", keywords, relatedProducts, relatedValues);
+            fail("Creating a product with an existing name 'Apple' should throw an IllegalArgumentException.");
+        } catch (IllegalArgumentException e) { }
 
         // Incorrect relatedProducts size
         final List<Product> auxRelatedProducts = Arrays.asList(product1, product2);
-        assertThrows(IllegalArgumentException.class, () -> catalog.createNewProduct("Grapes", 2.50f, ProductTemperature.AMBIENT, "/images/grapes.jpg", keywords, auxRelatedProducts, relatedValues),
-                "Creating a product with incorrect relatedProducts size should throw an IllegalArgumentException.");
+        try {
+            catalog.createNewProduct("Grapes", 2.50f, ProductTemperature.AMBIENT, "/images/grapes.jpg", keywords, auxRelatedProducts, relatedValues);
+            fail("Creating a product with incorrect relatedProducts size should throw an IllegalArgumentException.");
+        } catch (IllegalArgumentException e) { }
 
         // Incorrect relatedValues size
         final List<Float> auxRelatedValues = Arrays.asList(0.3f, 0.5f);
-        assertThrows(IllegalArgumentException.class, () -> catalog.createNewProduct("Strawberry", 1.75f, ProductTemperature.AMBIENT, "/images/strawberry.jpg", keywords, relatedProducts, auxRelatedValues),
-                "Creating a product with incorrect relatedValues size should throw an IllegalArgumentException.");
+        try {
+            catalog.createNewProduct("Strawberry", 1.75f, ProductTemperature.AMBIENT, "/images/strawberry.jpg", keywords, relatedProducts, auxRelatedValues);
+            fail("Creating a product with incorrect relatedValues size should throw an IllegalArgumentException.");
+        } catch (IllegalArgumentException e) { }
     }
 
     @Test
-    void testEraseProduct() {
+    public void testEraseProduct() {
         //Erase product 1
         catalog.eraseProduct("Apple");
 
-        assertFalse(catalog.contains("Apple"), "Catalog should not contain 'Apple'.");
+        assertFalse("Catalog should not contain 'Apple'.", catalog.contains("Apple"));
 
-        assertThrows(IllegalArgumentException.class, () -> product1.getRelatedValue(product2),
-                "product1 (Apple) should not be related to product2 (Chocolate Bar) before erasing the product from the catalog");
-
+        try {
+            product1.getRelatedValue(product2);
+            fail("product1 (Apple) should not be related to product2 (Chocolate Bar) before erasing the product from the catalog");
+        } catch (IllegalArgumentException e) { }
     }
 
     @Test
-    void testModifyRelationProduct() {
+    public void testModifyRelationProduct() {
         catalog.modifyRelationProduct(product1, product2, 0.9f);
 
-        assertEquals(0.9f, product1.getRelatedValue(product2),
-                "Product1's relation with product'2' should be updated to 0.9.");
-        assertEquals(0.9f, product2.getRelatedValue(product1),
-                "Product2's relation with product'1' should be updated to 0.9.");
+        assertEquals("Product1's relation with product'2' should be updated to 0.9.", 0.9f, product1.getRelatedValue(product2), 0.01f);
+        assertEquals("Product2's relation with product'1' should be updated to 0.9.", 0.9f, product2.getRelatedValue(product1), 0.01f);
     }
 
     @Test
-    void searchProduct() {
+    public void searchProduct() {
         List<Product> res1 = catalog.searchProduct("appl"); //Like apple
         List<Product> res2 = catalog.searchProduct("refrhing"); //Like refreshing, a water bottle keyword
 
-        assertEquals("Apple", res1.getFirst().getName(),
-                "When searching 'appl' he first result should be Apple");
-        assertEquals("Water Bottle", res2.getFirst().getName(),
-                "When searching 'refrhing' he first result should be Water Bottle");
+        assertEquals("When searching 'appl' the first result should be Apple", "Apple", res1.get(0).getName());
+        assertEquals("When searching 'refrhing' the first result should be Water Bottle", "Water Bottle", res2.get(0).getName());
     }
 }
